李桥_12月29更新

--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -2,18 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>文件管理系统</title>
+<title>场地查询系统</title>
 <link type="text/css" rel="stylesheet"
 	href="../views/login_register/css/login.css">
-<link type="text/css" rel="stylesheet"
-	href="../css/angular-tree/tree-control.css">
-<link type="text/css" rel="stylesheet"
-	href="../css/angular-tree/tree-control-attribute.css">
-<link type="text/css" rel="stylesheet" href="../css/common/common.css">
+<link type="text/css" rel="stylesheet" href="../css/common/area_com.css">
 <link type="text/css" rel="stylesheet"
 	href="../css/bootstrap/css/bootstrap.css">
 <link type="text/css" rel="stylesheet"
 	href="../js/bootstrap-table/bootstrap-table.css">
+<link rel="stylesheet" type="text/css" href="../css/common/verticalMenu.css">
 <script src="../js/require/require.js" data-main="../js/main.js"></script>
 <style type="text/css">
 </style>
