--- a/src/main/webapp/views/main/html/main.html
+++ b/src/main/webapp/views/main/html/main.html
@@ -1,209 +1,12 @@
-<div class="row head_bar" ng-init="init()">
-	<div class="col-xs-2 main_logo">文件管理系统</div>
-	<div class="col-xs-9">
-		<ul class="nav_ul">
-			<li class="nav_li"><div class="nav_div">
-					<a class="nav_a" href="javascript:void(0)"
-						ng-click="openNewFolderDialog()">新建文件夹</a>
-				</div></li>
-			<li class="nav_li"><div class="nav_div">
-					<a class="nav_a" href="javascript:void(0)"
-						ng-click="openFileDialog()">上传新文件</a>
-				</div></li>
-			<li class="nav_li"><div class="nav_div">
-					<a class="nav_a" href="javascript:void(0)" ui-sref="main.logList">操作历史</a>
-				</div></li>
-			<li class="nav_li"><div class="nav_div">
-					<a class="nav_a" href="javascript:void(0)"
-						ng-click="goPersonnalCenter()">个人中心</a>
-				</div></li>
-			<li class="nav_li"><div class="nav_a">
-					<a class="nav_a" href="javascript:void(0)">系统配置</a>
-				</div></li>
-		</ul>
+<div class="row area_navbar"></div>
+<div class="row area_mainContent">
+	<div class="col-xs-2 col-md-offset-1 area_mainBorderStyle" style="padding: 0px;">
+		<div class="area_left_nav">
+			<leftnav items="items"></leftnav>
+		</div>
 	</div>
-	<div class="col-xs-1">
-		<a href="javascript:void(0)"
-			style="text-align: center; text-decoration: none; color: #ad177c; display: inline-block; height: 50px; line-height: 50px; width: 62px; background: #96cac8; border-radius: 35px;"
-			ng-click="loginOut()">注销</a>
-	</div>
-</div>
-<div class="row main_content">
-	<div class="col-xs-2 main_tree_container" style="height: 100%;">
-		<div class="user-photo">
-			<a class="img" title="我的头像"><img src="../images/face.jpg"></a>
-			<p style="text-align: center;">
-				你好！<span class="userName" id="userNameSpan" title="currentUser.eid">{{currentUser.eid}}</span>,
-				欢迎登录
-			</p>
-		</div>
-		<div ng-if="perFolderLength==0" style="text-align: center;">
-			<a href="jvascript:void(0)" ng-click="openNewFolderDialog()"
-				style="text-decoration: none">没有文件夹，新建一个文件夹吧！</a>
-		</div>
-		<treecontrol class="tree-classic" tree-model="dataForTheTree"
-			options="treeOptions" on-node-toggle="expandNode(node,expanded)"
-			on-selection="onTreeLeafItemClickFunction(node)"
-			on-selfnontextmenu="selTextMenu()">{{node.folderName?node.folderName:node.fileName}}</treecontrol>
-	</div>
-	<div class="col-xs-10"
-		style="height: 100%; box-shadow: cyan 1px 7px 5px;">
-		<div class="row"
-			style="height: 34px; background: #e8dfd2; padding-left: 35px; padding-top: 6px;">当前文件夹：{{folderName}}</div>
-		<div class="row" style="margin-top: 10px">
-			<div style="height: 30px; padding-left: 75%; margin-bottom: 20px;">
-				<input type="text"
-					style="height: 100%; line-height: 100%; float: left; margin-right: 10px;"
-					ng-model="searchCondition" placeholder="收索你想要的文件">
-				<button class="illegal_btn" style="height: 30px; line-height: 30px;"
-					ng-click="search()">收索</button>
-			</div>
-		</div>
-		<div class="row" style="height: 83%; overflow-y: auto;">
-			<div class="col-xs-12" ui-view>
-				<fieldset style="padding: 2%;">
-					<legend
-						style="padding-top: 20px; padding-top: 20px; font-size: 14px; font-family: 微软雅黑;">文件夹</legend>
-					<div class="row mainTable_container">
-						<ul ng-if="firstLayerFolder.length!=0">
-							<a ng-repeat="folder in firstLayerFolder">
-								<li ng-click="goAimFolder(folder)"><div>
-										<img alt="" src="../images/timg.jpg" style="width: 96px;">
-										<p style="width: 100%; text-align: center; color: #009688">{{folder.folderName}}</p>
-									</div></li>
-							</a>
-						</ul>
-
-						<div style="text-align: center;"
-							ng-if="firstLayerFolder.length==0">暂无文件夹</div>
-					</div>
-				</fieldset>
-			</div>
-		</div>
-		<!-- <button class="layui-btn "
-			style="height: 30px; line-height: 30px; float: right; background: #dc391b;"
-			ng-click="back()">返回</button> -->
+	<div class="col-xs-7 area_content" style="border-left:9px solid #6d8198" ui-view>
+		
 	</div>
 </div>
 
-<script type="text/ng-template" id="myModalContent.html">
-	<div class="modal-header" style="background: #009688;color: white;">
-		<h4 class="modal-title">上传新文件</h4>
-	</div>
-	<div class="modal-body">
-            <div class="row">
-                <div class="col-md-3">
-                    <h5>选择文件</h5>
-                    <!-- Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}" -->
-                    <!--  Multiple -->
-                    <input type="file" nv-file-select="" uploader="uploader" multiple  /><br/>
-					<div>
-						<span>所属文件夹</span>
-						<select ng-model="folderId" ng-change="chgF()">
-							<option ng-repeat="folder in currentUserAllFolders" value="{{folder.id}}">{{folder.folderName}}</option>
-						</select>
-					</div>
-                    <!--<input type="file" nv-file-select="file" uploader="uploader" />-->
-                </div>
-
-                <div class="col-md-9" style="margin-bottom: 40px">
-
-                    <p>文件数量: {{ uploader.queue.length }}</p>
-
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th width="50%">文件名称</th>
-                                <th ng-show="uploader.isHTML5">文件大小</th>
-                                <th ng-show="uploader.isHTML5">上传进度</th>
-                                <th>状态</th>
-                                <th>操作</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="item in uploader.queue">
-                                <td><strong>{{ item.file.name }}</strong></td>
-                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-                                <td ng-show="uploader.isHTML5">
-                                    <div class="progress" style="margin-bottom: 0;">
-                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
-                                    </div>
-                                </td>
-                                <td class="text-center">
-                                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                                </td>
-                               <td nowrap>
-                                    <!-- <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
-                                        <span class="glyphicon glyphicon-upload"></span> 上传
-                                    </button>
-                                    <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
-                                        <span class="glyphicon glyphicon-ban-circle"></span> 取消
-                                    </button> -->
-                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
-                                        <span class="glyphicon glyphicon-trash"></span> 移除
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div>
-                        <div>
-                           	 进度:
-                            <div class="progress" style="">
-                                <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
-                            </div>
-                        </div>
-                        <!-- <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
-                            <span class="glyphicon glyphicon-upload"></span> Upload all
-                        </button>
-                        <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
-                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-                        </button>
-                        <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
-                            <span class="glyphicon glyphicon-trash"></span> Remove all
-                        </button> -->
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="button" ng-click="uploader.uploadAll()">确认上传</button>
-		<button class="btn btn-warning" type="button" ng-click="cancel()">取消</button>
-	</div>
-</script>
-
-<script type="text/ng-template" id="myFolderForm.html">
-	<div class="modal-header" style="background: #009688;color: white;">
-		<h4 class="modal-title">新建文件夹</h4>
-	</div>
-	<div class="modal-body">
-        <div class="row">
-			<ul class="search_ul">
-				<li><span class="layui-form-label">文件夹名称：</span>
-					<div class="layui-input-inline">
-						<input type="text" ng-model="myFolder.folderName" autocomplete="off" placeholder="请输入文件夹名" class="layui-input">
-					</div>
-				</li>
-			</ul>
-			<ul class="search_ul">
-				<li><span class="layui-form-label">父文件夹：</span>
-					<div class="layui-input-inline">
-						<select ng-model="myFolder.extrcode" class="parentFolder_select1">
-							<option ng-repeat="folder in currentUserAllFolders" value="{{folder.extrcode}}">{{folder.folderName}}</option>
-						</select>
-					</div>
-				</li>
-			</ul>
-        </div>
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="button" ng-click="createNewFolder()">新建</button>
-		<button class="btn btn-warning" type="button" ng-click="cancel()">取消</button>
-	</div>
-</script>
